[package]
name = "share"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "abort"
lto = "fat"
opt-level = "z"
strip = true
codegen-units = 1


[dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "fs"] }
clap = { version = "4.5.55", features = ["derive"] }
axum = "0.8.8"
uuid = { version = "1.20.0", features = ["v4"] }
arboard = "3.6.1"
tokio-util = { version = "0.7.18", features = ["io"] }
local-ip-address = "0.6.9"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
rcgen = "0.14.7"
